# rir2localdb

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.claude/: WORKFLOW.md
.claude/session-log/: 01-03-fetcher-impl.md  01-03-fetcher-skeleton.md  01-04-sync-state.md  01-05-parsers-delegated.md  01-06a-etl-skeleton-confirmed.md  01-06b-etl-delegated-impl.md  01-07a-orchestrator-skeleton.md  01-07b-orchestrator-impl.md  01-08-fastapi.md  01-50-stabilization.md  01-99-stage-1-closed.md  02-01a-rpsl-parser-skeleton.md  02-01b-rpsl-parser-impl.md  02-02-rpsl-tables-migration.md  02-03a-rpsl-etl-skeleton.md  02-03b-rpsl-etl-impl.md  02-04-rpsl-api.md  02-05-arin-irr-and-rich-orchestrator.md  02-50-rpsl-completeness-and-cleanup.md  02-99-stage-2-closed.md  02-followup-arin-zero-padded-prefix.md  02-followup-cli-status-json.md  03-01-systemd-timer.md  03-02-metrics-and-structured-logs.md  03-03-stale-records-gc.md  03-04-docker.md  03-05-rdap-fallback.md  03-06-grafana-and-alerts.md  03-99-followup-release-v0.1.0.md  03-99-stage-3-closed.md  03-followup-release-v0.1.1.md  03-followup-serve-systemd.md  README.md  _template.md
.github/workflows/: ci.yml  integration.yml  notify-session-log.yml
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: dashboard.json  dashboards.yml  datasources.yml
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/systemd/: rir2localdb-serve.service  rir2localdb-sync.service  rir2localdb-sync.timer
docs/: 00-overview.md  01-data-sources.md  02-architecture.md  03-database-schema.md  04-sync-pipeline.md  05-parsers.md  06-api.md  07-operations.md  08-roadmap.md  09-decisions.md
docs/adr/: 0001-language-python.md  0002-storage-postgresql.md  0003-range-storage.md  0004-https-not-ftp.md  0005-async-sqlalchemy.md  0006-cooperative-claude-workflow.md  0007-rpsl-table-layout.md  0008-soft-delete-via-is-stale.md  0009-rdap-fallback-for-arin.md
migrations/: env.py
scripts/: install-systemd.sh
src/rir2localdb/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  sources.py
src/rir2localdb/api/: __init__.py  app.py  metrics.py  rdap.py  schemas.py
src/rir2localdb/api/routers/: __init__.py  asn.py  ip.py  meta.py
src/rir2localdb/db/: __init__.py  engine.py  models.py
src/rir2localdb/etl/: __init__.py  delegated_etl.py  rpsl_etl.py
src/rir2localdb/migrations/: env.py
src/rir2localdb/migrations/versions/: 0001_initial_schema.py  0002_rpsl_tables.py  0003_more_rpsl_tables.py  0004_normalize_rir_ripe_to_ripencc.py  0005_add_is_stale_columns.py  0006_add_rdap_cache.py
src/rir2localdb/parsers/: __init__.py  delegated.py  rpsl.py
src/rir2localdb/sync/: __init__.py  catalog.py  fetcher.py  gc.py  orchestrator.py  state.py
tests/: conftest.py  test_api_smoke.py  test_cli_status.py  test_delegated_etl.py  test_delegated_parser.py  test_fetcher.py  test_gc.py  test_logging_setup.py  test_metrics.py  test_orchestrator.py  test_rdap.py  test_rpsl_etl.py  test_rpsl_migration.py  test_rpsl_parser.py  test_state.py
tests/integration/: test_live_ripe.py
