[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rir2localdb"
version = "0.1.0"
description = "Daily mirror of RIR FTP data into PostgreSQL with whois-like REST API"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "rir2localdb authors" }]
keywords = ["rir", "whois", "ipam", "asn", "ripe", "arin", "apnic", "lacnic", "afrinic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx[http2]>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-tqdm",
    "testcontainers[postgresql]>=4.5",
    "hypothesis>=6.100",
]

[project.scripts]
rir2localdb = "rir2localdb.cli:app"

[project.urls]
Repository = "https://github.com/nmetluk/rir2localdb"

[tool.hatch.build.targets.wheel]
packages = ["src/rir2localdb"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "SIM", "RUF"]
# E501 — line length, отдаём форматтеру.
# RUF001/002/003 — «омоглифы»: ругаются на кириллицу в docstring'ах
# и комментариях; в этом проекте они на русском by design.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q -m 'not integration'"
markers = [
    "integration: tests that hit live external services. Skipped by default; run with `pytest -m integration`.",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
